--- a/MinionApp/Base.lproj/Main.storyboard
+++ b/MinionApp/Base.lproj/Main.storyboard
@@ -12,7 +12,7 @@
         <!--Minion View Controller-->
         <scene sceneID="W5V-k3-oPD">
             <objects>
-                <tableViewController id="s07-6Q-frB" customClass="MinionViewController" customModule="MinionApp" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="minionTableViewController" id="s07-6Q-frB" customClass="MinionViewController" customModule="MinionApp" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="FaG-32-5TN">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -22,7 +22,7 @@
                                 <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="oOu-yT-Sbb" id="BFy-w3-sUz">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                             </tableViewCell>
